# template_export

./: .gitignore  .gitmodules  ALGO.cmake  ALGO.h  CMakeLists.txt  README.md  algo.h  test.cpp
AOS_lib/: README.md  settings.gradle.kts
AOS_lib/app/: build.gradle.kts
AOS_lib/app/src/androidTest/java/com/mpwav/aos_lib/: ExampleInstrumentedTest.kt
AOS_lib/app/src/main/: AndroidManifest.xml
AOS_lib/app/src/main/cpp/: CMakeLists.txt  native-ALGO.cpp
AOS_lib/app/src/main/java/com/mpwav/aos_lib/: MainActivity.kt
AOS_lib/app/src/main/java/com/mpwav/aos_lib/ui/theme/: Color.kt  Theme.kt  Type.kt
AOS_lib/app/src/main/res/values/: strings.xml  themes.xml
AOS_lib/app/src/test/java/com/mpwav/aos_lib/: ExampleUnitTest.kt
AOS_lib/gradle/wrapper/: gradle-wrapper.properties
mkdocs/: README.md  mkdocs.yml  requirements.txt
mkdocs/docs/: index.md
mkdocs/docs/src/: example.md
package/: CMakeLists.txt
package_python/: ALGO.py  algo.py  test.py  test_File_IO.py  test_Mic_IO.py
src/: ALGO_decl.h  ALGO_impl.cpp  ALGO_wrap.cpp  algo_decl.h  algo_impl.cpp  algo_wrapper.cpp  algorithm_wrapper.cpp  algorithm_wrapper.h
